kubernetes-manifest/envoy/gateway-envoy.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: gateway-envoy
data:
  envoy.json: |
    {
        "listeners": [
            {
                "address": "tcp://0.0.0.0:80",
                "filters": [
                    {
                        "type": "read",
                        "name": "http_connection_manager",
                        "config": {
                            "codec_type": "auto",
                            "stat_prefix": "ingress_http",
                            "route_config": {
                                "virtual_hosts": [
                                    {
                                        "name": "backend",
                                        "domains": [
                                            "*"
                                        ],
                                        "routes": [
                                            {
                                                "timeout_ms": 0,
                                                "prefix": "/user",
                                                "cluster": "usersvc"
                                            }
                                        ]
                                    }
                                ]
                            },
                            "filters": [
                                {
                                    "type": "decoder",
                                    "name": "router",
                                    "config": {}
                                }
                            ]
                        }
                    }
                ]
            }
        ],
        "admin": {
            "access_log_path": "/dev/null",
            "address": "tcp://127.0.0.1:8001"
        },
        "cluster_manager": {
            "clusters": [
                {
                    "name": "usersvc",
                    "connect_timeout_ms": 250,
                    "type": "strict_dns",
                    "service_name": "usersvc",
                    "lb_type": "round_robin",
                    "features": "http2",
                    "hosts": [
                        {
                            "url": "tcp://usersvc:80"
                        }
                    ]
                }
            ]
        }
    }
